fix: relax CORS policy to allow Vercel connections